--- a/playbook.yml
+++ b/playbook.yml
@@ -8,6 +8,7 @@
     user_list:
        - {name: eric, groups: "eric,wheel"}
   roles:
+    - spacemacs
     - commons
     - cinnamon
     - network
